sigil-lang/tree-sitter-sigil/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

// This is a comment
fn main() {}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (function_definition
    name: (identifier)
    (parameter_list)
    (block)))

================================================================================
Block comment
================================================================================

/* Block comment */
fn main() {}

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (function_definition
    name: (identifier)
    (parameter_list)
    (block)))

================================================================================
Empty block comment
================================================================================

/**/
fn main() {}

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (function_definition
    name: (identifier)
    (parameter_list)
    (block)))

================================================================================
Comment in function
================================================================================

fn test() {
    // inside function
    let x = 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (line_comment)
      (let_statement
        (identifier_pattern
          (identifier))
        (literal
          (number_literal))))))
