sigil-lang/tree-sitter-sigil/test/corpus/enums.txt
================================================================================
Simple enum
================================================================================

enum Color {
    Red,
    Green,
    Blue,
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_body
      (enum_variant
        name: (identifier))
      (enum_variant
        name: (identifier))
      (enum_variant
        name: (identifier)))))

================================================================================
Enum with tuple variants
================================================================================

enum Message {
    Text(str),
    Number(i32),
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_body
      (enum_variant
        name: (identifier)
        (tuple_fields
          (primitive_type)))
      (enum_variant
        name: (identifier)
        (tuple_fields
          (primitive_type))))))

================================================================================
Enum with struct variants
================================================================================

enum Event {
    Click { x: i32, y: i32 },
    Key { code: u32 },
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_body
      (enum_variant
        name: (identifier)
        (struct_body
          (struct_field
            name: (identifier)
            (primitive_type))
          (struct_field
            name: (identifier)
            (primitive_type))))
      (enum_variant
        name: (identifier)
        (struct_body
          (struct_field
            name: (identifier)
            (primitive_type)))))))

================================================================================
Enum with discriminant
================================================================================

enum Status {
    Ok = 0,
    Error = 1,
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_body
      (enum_variant
        name: (identifier)
        (literal
          (number_literal)))
      (enum_variant
        name: (identifier)
        (literal
          (number_literal))))))
