sigil-lang/tree-sitter-sigil/test/corpus/evidentiality.txt
================================================================================
Evidentiality markers on variables
================================================================================

fn process() {
    let known! = 42;
    let uncertain? = compute();
    let reported~ = external_api();
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (evidentiality_marker)
        (literal
          (number_literal)))
      (let_statement
        (identifier_pattern
          (identifier))
        (evidentiality_marker)
        (call_expression
          (path
            (identifier))))
      (let_statement
        (identifier_pattern
          (identifier))
        (evidentiality_marker)
        (call_expression
          (path
            (identifier)))))))

================================================================================
Function with evidentiality parameter
================================================================================

fn validate(input~: str) -> Result! {
    return Ok(input);
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        (evidentiality_marker)
        (primitive_type)))
    (evidentiality_type
      (path
        (identifier))
      (evidentiality_marker))
    (block
      (return_statement
        (call_expression
          (path
            (identifier))
          (path
            (identifier)))))))
