sigil-lang/tree-sitter-sigil/test/corpus/modules.txt
================================================================================
Use declaration
================================================================================

use std::io;

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (use_path
      (identifier)
      (identifier))))

================================================================================
Use with alias
================================================================================

use std::io as stdio;

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (use_path
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Use glob
================================================================================

use std::io::*;

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (use_path
      (identifier)
      (identifier))))

================================================================================
Module declaration
================================================================================

mod utils;

--------------------------------------------------------------------------------

(source_file
  (mod_declaration
    name: (identifier)))

================================================================================
Inline module
================================================================================

mod helpers {
    fn help() {}
}

--------------------------------------------------------------------------------

(source_file
  (mod_declaration
    name: (identifier)
    (block
      (function_definition
        name: (identifier)
        (parameter_list)
        (block)))))

================================================================================
Public module
================================================================================

pub mod api;

--------------------------------------------------------------------------------

(source_file
  (mod_declaration
    (visibility)
    name: (identifier)))
